src/test/deca/syntax/valid/provided/hello.lex
OBRACE: [@0,136:136='{',<8>,10:0]
PRINTLN: [@1,146:152='println',<6>,11:8]
OPARENT: [@2,153:153='(',<10>,11:15]
STRING: [@3,154:160='"Hello"',<1>,11:16]
CPARENT: [@4,161:161=')',<11>,11:23]
SEMI: [@5,162:162=';',<3>,11:24]
CBRACE: [@6,164:164='}',<9>,12:0]
