src/test/deca/syntax/invalid/print-invalid-token.lex
OBRACE: [@0,216:216='{',<8>,11:0]
PRINT: [@1,222:226='print',<7>,12:4]
OPARENT: [@2,227:227='(',<10>,12:9]
OBRACE: [@3,228:228='{',<8>,12:10]
CPARENT: [@4,229:229=')',<11>,12:11]
SEMI: [@5,230:230=';',<3>,12:12]
CBRACE: [@6,232:232='}',<9>,13:0]
